--- a/profile/Tarea_04/Tarea_04_Aliste_Catalina (final).ipynb
+++ b/profile/Tarea_04/Tarea_04_Aliste_Catalina (final).ipynb
@@ -57,7 +57,7 @@
         "plt.legend()\n",
         "plt.show()\n",
         "\n",
-        "#Seleccioné la lobrería de Matplot porque era la que conocía\n",
+        "#Seleccioné la librería de Matplot porque era la que conocía\n",
         "#Elegí hacer un gráfico de líneas porque me pareció que mostraría mejor los cambios drásticos de horas de sueño\n",
         "#La historia que se puede ver al analizar el gráfico es el de una persona (yo, Catalina) con no muy buenos hpabitos de sueño, cuya vida diaria podría estar implicada en esto\n",
         "#Podemos sacar conlcusiones a partir de estos datos como el que el miércole sy sábado son los días donde mas duerme, por lo tanto son los que no trabaja o asiste a la Universidad\n",
